--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -8,7 +8,7 @@
 .dark .cdx-button,
 .dark .ce-popover,
 .dark .ce-toolbar__plus:hover {
-  background: theme('colors.popover.DEFAULT');
+  background: theme('colors.popover.foreground');
   color: inherit;
   border-color: theme('colors.border');
 }
